syntax = "proto3";

package file;
option go_package = "../../pkg/pb;filegrpc";

message ListFilesRequest {}

message ListFilesResponse {
  repeated FileMetadata files = 1; 
}

message FileMetadata {
  string file_name = 1;      
  string created_at = 2;     
  string updated_at = 3;    
}